[package]
name = "blockchain-tutorial-part-2"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
num-bigint = "0.2.3"
num-traits = "0.2.8"
rust-crypto = "0.2.36"
