[package]
name = "blockchain-tutorial-part-3"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
num-bigint = "0.2.5"
num-traits = "0.2.11"
rmp-serde = "0.14.0"
rust-crypto = "0.2.36"
serde = "1.0.104"
serde_derive = "1.0.104"
sled = "0.30.3"
structopt = "0.3.8"
