[package]
name = "blockchain-tutorial-part-3"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
num-bigint = "0.3.0"
num-traits = "0.2.12"
rmp-serde = "0.14.4"
rust-crypto = "0.2.36"
serde = "1.0.117"
serde_derive = "1.0.117"
sled = "0.34.4"
structopt = "0.3.20"
